tests/baselines/reference/importsNotUsedAsValues_error.errors.txt
error TS5102: Option 'importsNotUsedAsValues' has been removed. Please remove it from your configuration.
  Use 'verbatimModuleSyntax' instead.
/e.ts(1,1): error TS6192: All imports in import declaration are unused.


!!! error TS5102: Option 'importsNotUsedAsValues' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'verbatimModuleSyntax' instead.
==== /a.ts (0 errors) ====
    export default class {}
    export class A {}
    export type B = {};
    export const enum C { One, Two }
    
==== /b.ts (0 errors) ====
    import { A, B } from './a'; // Error
    let a: A;
    let b: B;
    console.log(a, b);
    
==== /c.ts (0 errors) ====
    import Default, * as named from './a'; // Error
    let a: Default;
    let b: named.B;
    console.log(a, b);
    
==== /d.ts (0 errors) ====
    import Default, { A } from './a';
    const a = A;
    let b: Default;
    console.log(a, b);
    
==== /e.ts (1 errors) ====
    import { A, B } from './a'; // noUnusedLocals error only
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    
==== /f.ts (0 errors) ====
    import { C } from './a';
    import type { C as D } from './a';
    C.One;
    let c: D = C.Two;
    let d: D.Two = C.Two;
    console.log(c, d);
    
==== /g.ts (0 errors) ====
    import { C } from './a';
    let c: C;
    let d: C.Two;
    console.log(c, d);
    
==== /h.ts (0 errors) ====
    class H {}
    export = H;
    
==== /i.ts (0 errors) ====
    import H = require('./h'); // Error
    let h: H = {};
    console.log(h);
    
==== /j.ts (0 errors) ====
    import H = require('./h'); // noUnusedLocals error only
    
==== /k.ts (0 errors) ====
    const enum K { One, Two }
    export = K;
    
==== /l.ts (0 errors) ====
    import K = require('./k');
    K.One;
    
==== /j.ts (0 errors) ====
    // Sad face https://github.com/microsoft/TypeScript/blob/6b04f5039429b9d412696fe2febe39ecc69ad365/src/testRunner/compilerRunner.ts#L207